--- a/TestApiProject/TestApiProject/appsettings.json
+++ b/TestApiProject/TestApiProject/appsettings.json
@@ -5,7 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "„ApiKey“": "“pecostatest“"
+  "AllowedHosts": "*"
 }
