--- a/TestApiProject/Domain/Domain.csproj
+++ b/TestApiProject/Domain/Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Abp" Version="7.2.1" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
   </ItemGroup>
 
 </Project>
