--- a/TestApiProject/Domain/Domain.csproj
+++ b/TestApiProject/Domain/Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Abp" Version="7.2.1" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="NPOI" Version="2.5.6" />
   </ItemGroup>
 
 </Project>
